--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ dependencies = [
     "fastapi==0.115.0",
     "httpx<0.28.0",
     "openai==1.51.2",
+    "paddleocr>=3.2.0",
+    "pillow==10.4.0",
     "pydantic==2.9.2",
+    "pytesseract==0.3.10",
     "python-dotenv==1.0.1",
     "python-multipart==0.0.9",
     "uvicorn[standard]==0.30.6",
