--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "paddleocr>=3.2.0",
     "pillow==10.4.0",
     "pydantic==2.9.2",
+    "pydantic-settings>=2.10.1",
     "pytesseract==0.3.10",
     "python-dotenv==1.0.1",
     "python-multipart==0.0.9",
