--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "pytesseract==0.3.10",
     "python-dotenv==1.0.1",
     "python-multipart==0.0.9",
+    "requests>=2.32.5",
     "uvicorn[standard]==0.30.6",
 ]
